--- a/GymHelper/Base.lproj/Main.storyboard
+++ b/GymHelper/Base.lproj/Main.storyboard
@@ -208,13 +208,46 @@
                                 <rect key="frame" x="10" y="269" width="373" height="563"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="aC8-3n-jsi">
-                                        <rect key="frame" x="0.0" y="50" width="373" height="44.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MyWorkoutCell" rowHeight="125" id="aC8-3n-jsi" customClass="MyWorkoutCell" customModule="GymHelper" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="373" height="125"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aC8-3n-jsi" id="L3o-6E-k93">
-                                            <rect key="frame" x="0.0" y="0.0" width="373" height="44.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="373" height="125"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="무게" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yui-Je-v5g">
+                                                    <rect key="frame" x="30" y="50" width="30" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2025.06.18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Unn-qC-k0s">
+                                                    <rect key="frame" x="90" y="51" width="86" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="스쿼트" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="whF-XX-3yR">
+                                                    <rect key="frame" x="226" y="50" width="44.333333333333314" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="whF-XX-3yR" firstAttribute="baseline" secondItem="Yui-Je-v5g" secondAttribute="baseline" id="Ekf-i5-Drd"/>
+                                                <constraint firstItem="Yui-Je-v5g" firstAttribute="leading" secondItem="L3o-6E-k93" secondAttribute="leadingMargin" constant="10" id="Z2A-Jh-9zK"/>
+                                                <constraint firstItem="Yui-Je-v5g" firstAttribute="top" secondItem="L3o-6E-k93" secondAttribute="topMargin" constant="39" id="asY-4Y-uSo"/>
+                                                <constraint firstItem="whF-XX-3yR" firstAttribute="leading" secondItem="Unn-qC-k0s" secondAttribute="trailing" constant="50" id="lUI-Ic-CCI"/>
+                                                <constraint firstItem="Unn-qC-k0s" firstAttribute="top" secondItem="L3o-6E-k93" secondAttribute="topMargin" constant="40" id="oTh-Kn-BOX"/>
+                                                <constraint firstItem="Unn-qC-k0s" firstAttribute="leading" secondItem="Yui-Je-v5g" secondAttribute="trailing" constant="30" id="uqf-hJ-qSc"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="Unn-qC-k0s" id="Oqp-nt-y9Z"/>
+                                            <outlet property="weightLabel" destination="Yui-Je-v5g" id="SkA-v2-pFp"/>
+                                            <outlet property="workoutLabel" destination="whF-XX-3yR" id="HLL-0j-dHU"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -237,7 +270,8 @@
                     </view>
                     <navigationItem key="navigationItem" id="8Sv-X9-6RD"/>
                     <connections>
-                        <outlet property="loginEmailLabel" destination="tpa-yg-7eg" id="V2i-Kn-Esy"/>
+                        <outlet property="loginEmailLabel" destination="tpa-yg-7eg" id="OIe-AW-vt4"/>
+                        <outlet property="tableView" destination="qzD-Vj-qat" id="cAn-41-WTE"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SyI-oM-MRc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
